cargo-features = ["resolver"]

[package]
name = "sweet"
version = "0.1.0"
edition = "2018"



[features]
exclude_entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.8"
byteorder = "1.4.3"
thiserror = "1.0"
borsh = "0.9.1"
borsh-derive = "0.9.0"

[dev-dependencies]
solana-program-test = "1.8"
solana-sdk = "1.8"

[lib]
name = "sweet"
crate-type = ["cdylib", "lib"]